# AcceptanceCriteriaDemo

./: .gitignore  README.md  pyproject.toml
src/acceptance_criteria_demo/: __init__.py
tests/: test_example.py
