[project]
name = "acceptance-criteria-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "leedtan@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.6.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]

[project.scripts]
acceptance-criteria-demo = "acceptance_criteria_demo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.1",
]
